// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error error on exit 1`] = `
"FAIL tests/providers-stdlib/childProcess/__error_on_exit.ts


  ● Test suite failed to run

    Test context \\"childProcess\\" failed while running setdown logic inside Jest \\"afterAll\\": 
    The child process exited with non-zero exit code: 1. Its combined stderr and stdout output was:

    ----------------------------------------------------------------
    ready
    /DYNAMIC FILE PATH
        throw new Error('Something bad happened while reacting to sigterm.');
              ^
    Error: Something bad happened while reacting to sigterm.

      12 | const workingTimeout = setTimeout(() => {}, 1000 * 60 * 60 /* 1h */)
      13 |
    > 14 | process.on('SIGTERM', () => {
         |           ^
      15 |   clearTimeout(workingTimeout)
      16 |   throw new Error('Something bad happened while reacting to sigterm.')
      17 | })

      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      ---------------------------------------------------------------- 
      Command failed with exit code 1: ts-node ./tests/providers-stdlib/childProcess/__error_on_exit.fixture.ts
      /DYNAMIC FILE PATH
          throw new Error('Something bad happened while reacting to sigterm.');
                ^
      Error: Something bad happened while reacting to sigterm.
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      Error: The child process exited with non-zero exit code: 1. Its combined stderr and stdout output was:
      ----------------------------------------------------------------
      ready
      /DYNAMIC FILE PATH
          throw new Error('Something bad happened while reacting to sigterm.');
                ^
      Error: Something bad happened while reacting to sigterm.
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      ---------------------------------------------------------------- 
      Command failed with exit code 1: ts-node ./tests/providers-stdlib/childProcess/__error_on_exit.fixture.ts
      /DYNAMIC FILE PATH
          throw new Error('Something bad happened while reacting to sigterm.');
                ^
      Error: Something bad happened while reacting to sigterm.
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      Error: Command failed with exit code 1: ts-node ./tests/providers-stdlib/childProcess/__error_on_exit.fixture.ts
      /DYNAMIC FILE PATH
          throw new Error('Something bad happened while reacting to sigterm.');
                ^
      Error: Something bad happened while reacting to sigterm.
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE

Test Suites: 1 failed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time: DYNAMIC NUMBER
Ran all test suites.
"
`;

exports[`error error while running 1`] = `
"FAIL tests/providers-stdlib/childProcess/__error_while_running.ts


  ● Test suite failed to run

    Test context \\"childProcess\\" failed while running setdown logic inside Jest \\"afterAll\\": 
    The child process exited with non-zero exit code: 1. Its combined stderr and stdout output was:

    ----------------------------------------------------------------
    ready
    /DYNAMIC FILE PATH
        throw new Error('Something went wrong while running.');
              ^
    Error: Something went wrong while running.

      2 |
      3 | setTimeout(() => {
    > 4 |   throw new Error('Something went wrong while running.')
        |           ^
      5 | }, 100)
      6 |
      7 | process.on('SIGTERM', () => {

      at DYNAMIC STACK TRACE LINE
      ---------------------------------------------------------------- 
      Command failed with exit code 1: ts-node ./tests/providers-stdlib/childProcess/__error_while_running.fixture.ts
      at DYNAMIC STACK TRACE LINE
      Error: The child process exited with non-zero exit code: 1. Its combined stderr and stdout output was:
      ----------------------------------------------------------------
      ready
      /DYNAMIC FILE PATH
          throw new Error('Something went wrong while running.');
                ^
      Error: Something went wrong while running.
      at DYNAMIC STACK TRACE LINE
      ---------------------------------------------------------------- 
      Command failed with exit code 1: ts-node ./tests/providers-stdlib/childProcess/__error_while_running.fixture.ts
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      Error: Command failed with exit code 1: ts-node ./tests/providers-stdlib/childProcess/__error_while_running.fixture.ts
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE

Test Suites: 1 failed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time: DYNAMIC NUMBER
Ran all test suites.
"
`;

exports[`error start timeout 1`] = `
"FAIL tests/providers-stdlib/childProcess/__start_timeout.ts
  start timeout
    ✕ test

  ● start timeout › test

    Test context \\"childProcess\\" failed while running setup logic inside Jest \\"beforeAll\\": 
    Timed out (500 ms) while waiting for child process start signal /ready/. While waiting, saw this stdout and stderr output from the process:

    ----------------------------------------------------------------
    1 (stdout)
    2 (stdout)
    3 (stderr)
    ----------------------------------------------------------------

      30 |       })
      31 |     } catch (error) {
    > 32 |       throw ono(
         |                ^
      33 |         error as Error,
      34 |         \`Test context \\"\${params.providerName}\\" failed while running setup logic inside Jest \\"\${params.jestHookName}\\":\`
      35 |       )

      at DYNAMIC STACK TRACE LINE
      Error: Timed out (500 ms) while waiting for child process start signal /ready/. While waiting, saw this stdout and stderr output from the process:
      ----------------------------------------------------------------
      1 (stdout)
      2 (stdout)
      3 (stderr)
      ----------------------------------------------------------------
      at DYNAMIC STACK TRACE LINE
      at DYNAMIC STACK TRACE LINE

Test Suites: 1 failed, 1 total
Tests:       1 failed, 1 total
Snapshots:   0 total
Time: DYNAMIC NUMBER
Ran all test suites.
"
`;
